@@ -2,6 +2,12 @@ GNU grep NEWS                                    -*- outline -*-
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+** Bug fixes
+
+  grep no longer fails when standard input is a file in the Linux
+  /proc file system and standard output is /dev/null.
+  [bug introduced in grep-2.27]
+
 
 * Noteworthy changes in release 2.27 (2016-12-06) [stable]
 
